[project]
name = "recycler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "eindex-callum>=0.1.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "torch>=2.7.1",
    "transformers>=4.53.2",
    "wandb>=0.21.0",
]
